force-app/main/default/objects/Metrics__c/Metrics__c.object-meta.xml
<CustomObject>
    <label>Metrics</label>
    <nameField>
        <displayFormat>MX-{000000}</displayFormat>
        <label>Metrics Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>