force-app/main/default/objects/Metrics__c/fields/I_RS_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>