force-app/main/default/objects/Metrics__c/fields/I_RS_Current__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>