force-app/main/default/objects/Metrics__c/fields/I_RS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_External_ID__c</fullName>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>