force-app/main/default/objects/Metrics__c/fields/I_RS_Metric_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Metric_Name__c</fullName>
    <label>Metric Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>