force-app/main/default/objects/Metrics__c/fields/I_RS_Research_Output__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output__c</fullName>
    <description>This will be for the master-detail relationship</description>
    <label>Research Output</label>
    <referenceTo>Research_Output__c</referenceTo>
    <relationshipLabel>Metrics</relationshipLabel>
    <relationshipName>Metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>