force-app/main/default/objects/Metrics__c/fields/I_RS_Source__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>