force-app/main/default/objects/Metrics__c/fields/I_RS_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category Normalised Citation Impact</fullName>
            </value>
            <value>
                <fullName>International collaboration status</fullName>
            </value>
            <value>
                <fullName>Industry collaboration status*</fullName>
            </value>
            <value>
                <fullName>Top 1% status</fullName>
            </value>
            <value>
                <fullName>Top 10% status</fullName>
            </value>
            <value>
                <fullName>Highly Cited status</fullName>
            </value>
            <value>
                <fullName>Hot status*</fullName>
            </value>
            <value>
                <fullName>Field Weighted Citation Impact</fullName>
            </value>
            <value>
                <fullName>Citation Count</fullName>
            </value>
            <value>
                <fullName>Top percentile status*</fullName>
            </value>
            <value>
                <fullName>Societal impact* (mass media, media exposure)</fullName>
            </value>
            <value>
                <fullName>Weighting points for NTROS</fullName>
            </value>
            <value>
                <fullName>Research commercialisation income</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Journal Index(es)</fullName>
                <isActive>false</isActive>
                <label>Journal Index(es)</label>
            </value>
            <value>
                <fullName>Journal Quartiles (SNIP/SJR)</fullName>
                <isActive>false</isActive>
                <label>Journal Quartiles (SNIP/SJR)</label>
            </value>
            <value>
                <fullName>Journal impact factor</fullName>
                <isActive>false</isActive>
                <label>Journal impact factor</label>
            </value>
            <value>
                <fullName>Journal quartile (JCR)</fullName>
                <isActive>false</isActive>
                <label>Journal quartile (JCR)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>