force-app/main/default/objects/Metrics__c/fields/I_RS_Value__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>