force-app/main/default/objects/Metrics__c/fields/I_RS_Value_Numeric__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Value_Numeric__c</fullName>
    <label>Value Numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>